--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -1,11 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui:composition template="/WEB-INF/templates/layout.xhtml"
+<ui:composition template="/WEB-INF/templates/dashboard.xhtml"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui">
    <ui:define name="content">
-      <p>Here goes your view-specific content.</p>
+
+       <div class="well">
+           <h4>Dashboard</h4>
+           <p>Intera linea</p>
+       </div>
+       <div class="row">
+           <div class="col-sm-3">
+               <div class="well">
+                   <h4>Users</h4>
+                   <p>1 Million</p>
+               </div>
+           </div>
+           <div class="col-sm-3">
+               <div class="well">
+                   <h4>Pages</h4>
+                   <p>100 Million</p>
+               </div>
+           </div>
+           <div class="col-sm-3">
+               <div class="well">
+                   <h4>Sessions</h4>
+                   <p>10 Million</p>
+               </div>
+           </div>
+           <div class="col-sm-3">
+               <div class="well">
+                   <h4>Bounce</h4>
+                   <p>30%</p>
+               </div>
+           </div>
+       </div>
+       <div class="row">
+           <div class="col-sm-4">
+               <div class="well">
+                   <p>Text</p>
+                   <p>Text</p>
+                   <p>Text</p>
+               </div>
+           </div>
+           <div class="col-sm-4">
+               <div class="well">
+                   <p>Text</p>
+                   <p>Text</p>
+                   <p>Text</p>
+               </div>
+           </div>
+           <div class="col-sm-4">
+               <div class="well">
+                   <p>Text</p>
+                   <p>Text</p>
+                   <p>Text</p>
+               </div>
+           </div>
+       </div>
+       <div class="row">
+           <div class="col-sm-8">
+               <div class="well">
+                   <p>Text</p>
+               </div>
+           </div>
+           <div class="col-sm-4">
+               <div class="well">
+                   <p>Text</p>
+               </div>
+           </div>
+       </div>
+
    </ui:define>
 </ui:composition>
